src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>rC_Connect__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Country__c</fullName>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Delivery_Address__c</fullName>
        <formula>IF(AND(ISBLANK(rC_Connect__Street_Line_1__c), ISBLANK(rC_Connect__Street_Line_2__c), ISBLANK(rC_Connect__City__c), ISBLANK(rC_Connect__State__c),ISBLANK(rC_Connect__Postal_Code__c),ISBLANK(rC_Connect__Country__c)),
 &apos;&apos; ,
IF(rC_Connect__Street_Line_1__c ==&apos;&apos;, &apos;&apos; ,
IF( AND(ISBLANK(rC_Connect__Street_Line_2__c), ISBLANK(rC_Connect__City__c), ISBLANK(rC_Connect__State__c),ISBLANK(rC_Connect__Postal_Code__c),ISBLANK(rC_Connect__Country__c))
,rC_Connect__Street_Line_1__c,rC_Connect__Street_Line_1__c&amp;&apos;, &apos;) )&amp;

IF(rC_Connect__Street_Line_2__c==&apos;&apos; ,&apos;&apos;,
IF(AND(ISBLANK(rC_Connect__City__c), ISBLANK(rC_Connect__State__c),ISBLANK(rC_Connect__Postal_Code__c),ISBLANK(rC_Connect__Country__c))
,rC_Connect__Street_Line_2__c,rC_Connect__Street_Line_2__c&amp;&apos;, &apos;))&amp;

IF(rC_Connect__City__c ==&apos;&apos;,&apos;&apos;,
IF(AND(ISBLANK(rC_Connect__State__c),ISBLANK(rC_Connect__Postal_Code__c),ISBLANK(rC_Connect__Country__c))
 ,rC_Connect__City__c,rC_Connect__City__c &amp;&apos;, &apos;))&amp;
    
IF(rC_Connect__State__c==&apos;&apos;,&apos;&apos;,
IF(AND(ISBLANK(rC_Connect__Postal_Code__c),ISBLANK(rC_Connect__Country__c))
,rC_Connect__State__c,rC_Connect__State__c&amp; &apos;, &apos;))&amp;

IF(rC_Connect__Postal_Code__c==&apos;&apos;,&apos;&apos;,
IF(ISBLANK(rC_Connect__Country__c),rC_Connect__Postal_Code__c,rC_Connect__Postal_Code__c&amp; &apos;, &apos;))&amp;

IF(rC_Connect__Country__c==&apos;&apos;, &apos;&apos; , rC_Connect__Country__c)

)</formula>
        <label>Delivery Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Selected_Delivery_Address__c</fullName>
        <formula>BLANKVALUE(rC_Connect__Delivery_Address__c, &apos;None selected&apos;) + &apos; [&apos; + HYPERLINK(&apos;/apex/rc_connect__opportunity_managedeliveryaddresses?id=&apos; +  OpportunityId + &apos;&amp;opportunityLineItem.Id=&apos; + Id + &apos;&amp;contact.Id=&apos; + rC_Giving__Beneficiary__c , &apos;Change&apos;, &apos;_self&apos;) + &apos;]&apos;</formula>
        <label>Selected Delivery Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Street_Address__c</fullName>
        <formula>IF(AND(ISBLANK(rC_Connect__Street_Line_1__c), ISBLANK(rC_Connect__Street_Line_2__c)), NULL, IF(ISBLANK(rC_Connect__Street_Line_2__c), rC_Connect__Street_Line_1__c, rC_Connect__Street_Line_1__c + &apos;, &apos; + rC_Connect__Street_Line_2__c))</formula>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Street_Line_1__c</fullName>
        <label>Street Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Street_Line_2__c</fullName>
        <label>Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Beneficiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beneficiary</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products (As Beneficiary)</relationshipLabel>
        <relationshipName>Opportunity_Products_Beneficiary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Delivery_Comments__c</fullName>
        <label>Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Address</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Ship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Total_Price__c</fullName>
        <formula>PricebookEntry.UnitPrice * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Giving Level</label>
        <referenceTo>rC_Giving__Giving_Level__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Product_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Package_Name__c</fullName>
        <label>Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Product_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Transferor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transferor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products (As Transferor)</relationshipLabel>
        <relationshipName>Opportunity_Products_Transferor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>rC_Inventory__Shipment__c</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>